fixed header size and resume button readability

--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@
 }
 
 header {
+    padding: 4rem 0;
     background-color: var(--bgDark);
     clip-path: polygon(0 0, 100% 0, 100% 100%, 73% 94%, 0 100%);
 }
@@ -88,7 +89,7 @@ body {
 .hero .right p {
     line-height: 1.9;
     margin-bottom: 2rem;
-    margin-right: 25rem;
+    margin-right: 8rem;
 }
 
 
@@ -232,4 +233,10 @@ section.services .card-grid .card:hover p {
     font-size: 16px;
     margin: 4px 2px;
     cursor: pointer;
+}
+
+@media screen and (max-width: 768px) {
+    header {
+        padding: 3rem 0; /* Adjust the top and bottom padding for smaller screens */
+    }
 }
